--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
     	<a href="/">Index</a>
 	    {% if current_user.is_authenticated %}
     	<a href="/internal">Internal</a>
+    	<a href="/users">Users</a>
 	    {% endif %}
 	    </div>
     	<div class="right">
