added option to block user

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
 	    {% if current_user.is_authenticated %}
     	<a href="/internal">Internal</a>
     	<a href="/users">Users</a>
+    	<a href="/reports">Reports</a>
 	    {% endif %}
 	    </div>
     	<div class="right">
