--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,12 @@
 body {
-    width: 940px;
+    width: 1200px;
     margin-left: auto;
     margin-right: auto;
+    font-size: 0.9rem;
+}
+
+p {
+    white-space: pre-wrap;
 }
 
 .pfp {
