--- a/templates/users.html
+++ b/templates/users.html
@@ -11,20 +11,26 @@
 			<th></th>
 			<th></th>
 		</tr>
-		{% for user in users %}
+		{% for user in page %}
 		<tr>
 			<td>{{ user.username }}</td>
 			<td>{{ user.email }}</td>
 			<td>{{ user.image_file }}</td>
 			<td>{{ user.active }}</td>
-			<td><a href="/sessions/{{ user.username }}">sessions</a></td>
-			<td><a href="/reports/{{ user.username }}">reports</a></td>
-			<td><a href="/report_user/{{ user.username }}">report {{ user.username }}</a></td>
+			<td><a href="/sessions/{{ user.id }}">sessions</a></td>
+			<td><a href="/reports/{{ user.id }}">reports</a></td>
+			<td><a href="/report_user/{{ user.id }}">report {{ user.username }}</a></td>
 		</tr>
 		{% endfor %}
 	</table>
 
-	{% if page_count == 0 %}
+	<div class=pagination>
+	{% for item in page.iter_pages() %}
+		<a href="/users?page={{item}}">{{item}}</a>
+	{% endfor %}
+	</div>
+
+<!-- 	{% if page_count == 0 %}
 		no users
 	{% else %}
 		page: {{ pagenum }} out of {{ page_count }}<br>
@@ -35,6 +41,6 @@
 	        <a href="/users?page={{page}}">{{page}}</a>
 	    	{% endif %}
 	    {% endfor %}
-    {% endif %}
+    {% endif %} -->
 
 {% endblock %}
