--- a/templates/user_reports.html
+++ b/templates/user_reports.html
@@ -11,22 +11,20 @@
 		<table>
 			<tr>
 				<th>user_id</th>
-				<th>token</th>
+				<th>username</th>
 				<th>created_at</th>
 				<th>expires_at</th>
-				<th>active</th>
-				<th>device</th>
-				<th>ip_address</th>
+				<th>explaination</th>
+				<th></th>
 			</tr>
-			{% for session in pagination %}
+			{% for report in pagination %}
 			<tr>
-				<td>{{ session.user_id }}</td>
-				<td>{{ session.token }}</td>
-				<td>{{ session.created_at }}</td>
-				<td>{{ session.expires_at }}</td>
-				<td>{{ session.active }}</td>
-				<td>{{ session.device }}</td>
-				<td>{{ session.ip_address }}</td>
+				<td>{{ report.user_reporting.username }}</td>
+				<td>{{ report.user_reported.username }}</td>
+				<td>{{ report.created_at }}</td>
+				<td>{{ report.expires_at }}</td>
+				<td>{{ report.explaination }}</td>
+				<td><a href="/block_user/{{ report.id }}">block</a></td>
 			</tr>
 			{% endfor %}
 		</table>
@@ -35,7 +33,7 @@
 	{% for page in pagination.iter_pages() %}
 		{% if page %}
 			{% if page != pagination.page %}
-				<a href="{{ url_for('sessions', user_id=user_id, page=page) }}">{{ page }}</a>
+				<a href="{{ url_for('user_reports', user_reported_id=user_reported_id, page=page) }}">{{ page }}</a>
 			{% else %}
 				<strong>{{ page }}</strong>
 			{% endif %}
